fixed broken link

--- a/_posts/2017-12-22-state-of-voice-coding-2017.html
+++ b/_posts/2017-12-22-state-of-voice-coding-2017.html
@@ -229,7 +229,7 @@ people that are injured to code again, but also to help people that are at-risk.
         achieve the pixel-precision that a mouse can get. However for most tasks, I think soon eye
         tracking will be good enough for a lot of tasks.<br>(Previously I’ve co-authored an academic
         paper about combining speech recognition and eye tracking for coding. <a
-                href="https://twitter.com/GeeWengel
+                href="https://twitter.com/GeeWengel"
                 rel=" noopener" target="_blank">Contact me if
         you want a copy,</a> there’s also a quick demo <a href="https://youtu.be/8wgXM70eQag"
                                                           rel="noopener" target="_blank">here</a>)
