make kramdown break on linebreak. Fixed all earlier posts to take this into account

--- a/_posts/2017-12-22-state-of-voice-coding-2017.html
+++ b/_posts/2017-12-22-state-of-voice-coding-2017.html
@@ -26,7 +26,7 @@ people that are injured to code again, but also to help people that are at-risk.
     explains his own setup using Dragon NaturallySpeaking, along with a language he’s created himself.
     The talk is just below and the demo starts at 8:50 — I’d suggest you go watch at least a minute of
     the demo to see how it looks and sounds.</p>
-<div class="img-div">
+<div class="yt-div">
     <figure id="171e">
         <iframe src="https://www.youtube.com/embed/8SkdfdXWYaI?feature=oembed" width="640" height="480"
                 frameborder="0" scrolling="no"></iframe>
